styles/siteStyle.css
/* ... */
nav ul.menu li .has-children.active span.chevron{
	transform:rotate(-180deg);
	-ms-transform:rotate(-180deg);
	-webkit-transform:rotate(-180deg);
	color:#09a3ee;
}
/* nav ul.menu li .parent:hover,
nav ul.menu li .parent.active{
	padding-left:50px;
	background:#26282b;
	background:#242a36;
}
nav ul.menu li.dark .parent:hover,
nav ul.menu li.dark .parent.active{
	padding-left:30px;
}
nav ul.menu li .parent:hover > p.text,
nav ul.menu li .parent.active > p.text{
	color:#09a3ee;
} */
span.badge,
nav ul.menu li span.badge{
	padding:6px 5px 5px;
	font-size:11px;
	line-height:9px;
	font-weight:300;
	background:#26282b;
	background:#242a36;
	color:#a6abba;
}
nav ul.menu li span.badge{
	position:absolute;
	top:20px;
	right:15px;
}
nav ul.menu li .parent.has-badge{
	padding-right:50px;
}
nav ul.menu li .parent:hover > span.badge,
nav ul.menu li .parent.active > span.badge,
nav ul.menu li  ul.child-menu li a:hover > span.badge{
	color:#fff;
	background:#09A3EE;
}
nav ul.menu li .parent p.text{
	max-width:100%;
}
nav ul.menu li a.parent p.text{
	cursor:pointer;
}
nav ul.menu li .parent.has-children p.text{
	max-width:80%;
}
nav ul.menu li .parent ul.child-menu{
	height:0;
	opacity:0;
	overflow:hidden;
}
nav ul.menu li .parent.active > ul.child-menu{
	height:auto;
	padding-top:18px;
	opacity:1;
}
nav ul.menu li .parent ul.child-menu li{
	border:none;
	color:#979daa;
	text-indent:0px;
}
nav ul.menu li .parent ul.child-menu li a{
	padding:6px 10px;
	padding-right:0;
	display:inline-block;
	width:100%;
	color:#979daa;
	font-size:14px;
}
nav ul.menu li .parent ul.child-menu li span.badge{
	top:5px;
	left:0;
	right:inherit;
	background:#32373a;
	background:#2e3541;
}
nav ul.menu li .parent.has-children li a p.text{
	max-width:100%;
	cursor:pointer;
}
nav ul.menu li .parent.has-children li a.has-badge p.text{
	max-width:84%;
}

/* Main Content */
.nav-tabs {
	border: 1px solid #ddd !important;
}
.nav-tabs > li > a,
.nav-tabs.nav-justified > li > a {
	border-bottom: 4px solid white !important;
	border-top: 0;
	border-left: 0;
	border-right: 0;
	font-size: 14px;
	/* font-family: 'Conv_apercu_bold'; */
	/* font-weight: normal; */
	color: black!important;
	background-color: white;
	border-radius: 0;
}
.nav-tabs.nav-justified > li > a {
	margin-bottom: 0 !important;
}
.nav-tabs > li > a:hover,
.nav-tabs > li > a.active,
.nav-tabs > li > a.active:hover,
.nav-tabs > li > a.active:focus {
  border-bottom: 4px solid #09a3ee !important;
}
.nav-tabs > li > a {
    border-right: 1px solid #ddd !important;
}
.nav-tabs > li:first-child > a {
	border-left: 0 !important;
	border-radius: 0 !important;
}
.nav-tabs > li:last-child > a {
	border-right: 0 !important;
}
@media (max-width: 767px) {
	.nav-tabs > li > a {
		border-left: 0 !important;
		border-right: 0 !important;
	}
}
.nav-tabs > li:last-child > a {
	/* border-left: 1px solid #ddd !important; */
    border-radius: 0 !important;
}
@media (max-width: 767px) {
	.nav-tabs > li:last-child > a {
		border-left: 0 !important;
	}
}
#main-content{
    margin-left:220px;
	margin-right:20px;
	position:relative;
	flex-shrink: 0;
	min-width: 720px;
}
#main-content .wrapper{
    display:inline-block;
    margin-top:24px;
    background-color:#fff;
	width:50vw;
	height:calc(100vh - 140px);
	min-width: 720px;
	flex-shrink: 0;
}
#main-content .layout.padded{
	height:calc(100vh - 140px - 80px);
}
@media (max-width: 1400px){
	#main-content .wrapper {
		margin-top:24px !important;
	}
}
#main-content .wrapper.largeWidth{
	width:1160px;
	min-height:inherit;
}
#main-content .header{
	background-color: #00a1f1;
    padding: 15px 30px;
    color: white;
    font-size: 15px;
    line-height: 20px;
    position: relative;
    border-radius: 4px 4px 0 0;
	max-height: 90px;
	/* font-family: 'Conv_apercu_bold', 'Helvetica', 'Sans-Serif', 'Arial'; */
}
#main-content .login .well{
	margin: 24px;
    box-shadow: 0 8px 16px rgba(0,0,0,.1);
}
#main-content .header a{
	color: #fff;
}
#main-content .emulator-header {
	background-color: #eef0f0;
	display: flex;
	align-items: center;
    color: #616368;
    font-size: 15px;
    line-height: 20px;
    position: relative;
    border-radius: 4px 4px 0 0;
    height: 48px;
}
.headerTitle{
	justify-self: center;
}
#main-content .emulator-header .back-btn-icon {
	color: #616368;
	padding: 16px;
}
#main-content .header.no-btn,
html[buildfire] .item .header.no-btn{
	padding-right:20px;
}
#main-content .header h4,
html[buildfire] .item .header h4{
	color: #fff;
	font-size: 20px;
	line-height: 20px;
	font-weight: 300;
	margin: 0;
	float: left;
	/* font-family: 'Conv_apercu_bold', 'Helvetica', 'Sans-Serif', 'Arial'; */
}
#main-content .header .pull-right,
html[buildfire] .item .header .pull-right{
	position:absolute;
	right:20px;
	top:16px;
}
#main-content .header .pull-right .btn,
html[buildfire] .item .header .pull-right .btn{
	padding:3px 25px;
}
.dropdown-toggle{
	background:#fff;
	border:1px solid #ddd;
}
.dropdown-toggle span.chevron{
	margin-top:0;
}
#main-content .padded{
	padding:30px 20px;
}
#main-content .padded .item + .item{
	margin-top:15px;
}
#main-content #dynamicContentContainer{
	padding:0;
}
#pluginControlHeader{
	margin:-20px 0 -18px;
}
.btn.dropdown-toggle{
	width:100%;
}
.main .inner-main .info{
	font-size:13px;
}
.inner-main .accordion-holder{
	width:100%;
}
.inner-main .accordion-holder .item .inner-main p{
	margin-top:6px;
	font-size:13px;
}
.item span.tip{
	display:inline-block;
	margin-left:8px;
	position:relative;
	top:5px;
}
#main-content .holder .paginate .pull-right p{
	margin-top:7px;
}
.draggable-list-view{
	border-radius:4px;
	border:1px solid #ddd;
}
.draggable-list-view .d-item{
	padding:8px 17px;
}
.draggable-list-view .ui-sortable-helper{
	background:#fff;
}
.carousel-items .d-item{
	min-height:56px;
}
.draggable-list-view .d-item + .d-item{
	border-top:1px solid #ddd;
}
.draggable-list-view .d-item span.icon{
	font-size:24px;
	position:relative;
	top:8px;
	margin-right:12px;
	cursor:pointer;
	color:#999;
}
/* ... */

